--- a/webapp/package.json
+++ b/webapp/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap-typeahead": "^5.1.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-intersection-observer": "^8.26.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
