--- a/account-svc/src/main/resources/application-dev.yml
+++ b/account-svc/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://kuaidaoresume-account.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-account?useUnicode=true&characterEncoding=utf-8
     username: root
-    password: mysqlroot
+    password: ~Youkn0wit)
   jpa:
     show-sql: true
 server:
