--- a/resume-svc/src/main/resources/application.yml
+++ b/resume-svc/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://kuaidaoresume-resume.cm27uwrvuert.ca-central-1.rds.amazonaws.com:3306/kuaidaoresume-resume?useUnicode=true&characterEncoding=utf-8
     username: root
-    password: mysqlroot
+    password: ~Youkn0wit)
     driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
