--- a/k8s/test/job-svc.yaml
+++ b/k8s/test/job-svc.yaml
@@ -18,6 +18,11 @@ spec:
         - name: job-svc
           image: kuaidaoresume/job-svc
           imagePullPolicy: Never
+          resources:
+            limits:
+              memory: "4Gi"
+            requests:
+              memory: "3Gi"
           ports:
             - name: http-port
               containerPort: 80
